cache_policy/service-cp.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-cp
spec:
  selector:
    app: product-task-cp
  ports:
  - port: 80
    targetPort: 5050
    protocol: TCP
    name: http
