cache_policy/gateway-cp.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: product-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
